src/snapshots/afrotd__parser__tests__interpretation_html_6.3.2_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.2.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A berührt illegal seinen Kick und, nachdem Team B den Ball
            berührt hat, recovert ihn Team A.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Berührung von Team A, nachdem Team B den Kick berührt hat,
                ist legal und, um den Ball zu bekommen, muss Team B ihn an der
                Stelle übernehmen, an der Team A den Kick illegal berührt hat.
                Solange die illegale Berührung durch das Kicking Team nicht
                auch eine illegale Recovery ist und sich keine Fouls ereignen,
                kann das Receiving Team den Ball mit der Gewissheit spielen,
                dass es ihn später an der Stelle der illegalen Berührung
                übernehmen kann.
            </p>
        </details>
    </div>
</article>
