src/snapshots/afrotd__parser__tests__interpretation_html_6.3.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s Punt überquert die neutrale Zone und wird zuerst von A80
            berührt. Danach recovert B40 den Ball, advanct 5 Meter und fumbelt.
            A20 recovert den Fumble und erzielt einen Touchdown. Während A20’s
            Lauf hielt B70 einen Gegenspieler fest.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Punkte zählen nicht. 5- und 10-Meterstrafen werden nicht
                auf den Try oder den anschließenden Kickoff übertragen. Die
                Strafe für Team B’s Foul wird gemäß den Regeln aufgehoben, weil
                es keinen Enforcement Spot gibt. Der Ball gehört Team B am
                Punkt der illegalen Berührung (Regel 10.2.5.a.2).
            </p>
        </details>
    </div>
</article>
