src/snapshots/afrotd__parser__tests__interpretation_html_6.3.4_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.4.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Scrimmage Kicks kommt der unberührte Ball an der B-3
            zur Ruhe, als A80 von B22 gegen den Ball geblockt wird, wodurch
            dieser in die Endzone getrieben wird und dort den Boden berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball wird dead, wenn er den Boden in der Endzone berührt.
                Touchback – Berührung durch A80 wird ignoriert (Regel 2.11.4).
                Gemäß der Regel hat keines der Teams den gekickten Ball berührt
                (Regel 8.6.1.b).
            </p>
        </details>
    </div>
</article>
