src/snapshots/afrotd__parser__tests__interpretation_html_6.3.4_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.4.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Als der Punt auf dem Boden rollt, blockt Punt Receiver B22 A88 um
            zu verhindern, dass dieser den Ball recovern kann. Die beiden
            Spieler blocken sich gegenseitig, als der Ball das Bein von B22
            berührt. A44 recovert den Ball an der B-30.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball, 1. und 10 von der B-30. Das ist keine erzwungene
                Ballberührung. Auch wenn A88 in Kontakt mit B22 ist, als der
                Ball das B22’s Bein berührt, wurde die Ballberührung nicht
                durch den Kontakt herbeigeführt. Die Game Clock startet mit dem
                Snap.
            </p>
        </details>
    </div>
</article>
