src/snapshots/afrotd__parser__tests__interpretation_html_6.3.4_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.4.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Als ein Punt auf dem Boden rollt, blockt A44 B33 in den Ball. Der
            Ball springt seitlich weg und trifft B48 am Bein. Team A recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball, 1. und 10 am Punkt der Recovery. Obwohl B33’s
                Berührung erzwungen wurde, wurde die Berührung von B48 wiederum
                nicht erzwungen (Regel 2.11.4). Durch B48’s Berührung kann Team
                A den Kick legal recovern (Regel 6.3.4.a).
            </p>
        </details>
    </div>
</article>
