src/snapshots/afrotd__parser__tests__interpretation_html_6.3.9_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.9.I
        </p>
    </div>
    <div class="message-body">
        <p>
            A33 berührt illegal einen Punt und der Ball rollt danach in Team
            B’s Endzone, wo Team B den Ball recovert und ins Spielfeld trägt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball wird dead, wenn er den Boden in der Endzone berührt.
                Team B kann entweder einen Touchback wählen oder den Ball am
                Punkt von Team A’s illegaler Berührung annehmen (Regel
                4.1.3.c).
            </p>
        </details>
    </div>
</article>
