src/snapshots/afrotd__parser__tests__interpretation_html_6.3.9_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.3.9.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Punt geht in Team B’s Endzone und wird jenseits der neutralen
            Zone nicht von Team B berührt. Team B begeht ein persönliches Foul,
            nachdem der Ball den Boden in der Endzone berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchback. Dead Ball Foul nach dem Touchback. Team B’s Ball,
                First Down und 10 von der B-10 nach der Durchführung der Strafe
                von der B-20.
            </p>
        </details>
    </div>
</article>
