src/snapshots/afrotd__parser__tests__interpretation_html_6.4.1_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.X
        </p>
    </div>
    <div class="message-body">
        <p>
            Punt Receiver B44 steht an der B-30 in Position zum Fangen des
            Kicks. A11 stürmt das Spielfeld hinunter, um den Punt zu
            überwachen. A11 bleibt etwa 30 Zentimeter vor B44 stehen, als sich
            der Kick auf B44 herabsenkt. B44 fängt den Ball, ohne sich durch
            die Präsenz durch A11 irritieren zu lassen oder ohne seine Position
            zu verändern. A11 wiederum weicht nicht zurück, um B44 mehr Platz
            zu lassen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul, Behinderung beim Fangen eines Kicks. A11 betrat die
                1-Meterzone direkt vor B44. 15-Meterstrafe.
            </p>
        </details>
    </div>
</article>
