src/snapshots/afrotd__parser__tests__interpretation_html_6.4.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Team B-Spieler, der im Begriff ist, einen Scrimmage Kick zu
            fangen, wird getackelt, bevor er den Ball erreicht, fängt aber im
            Fallen den Ball.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Behinderung beim Fangen eines Kicks. Strafe – 15 Meter vom Spot
                of Foul. Disqualifikation des Team A-Spielers, wenn es sich um
                ein schweres Foul handelt. Wenn das Foul sich zwischen den
                Goallines ereignet, wird die Strafe vom Spot of Foul
                durchgeführt und Team B bringt den Ball durch einen Snap ins
                Spiel. Ereignet sich das Foul hinter Team B’s Goalline, wird
                Team B ein Touchback zuerkannt und die Strafe wird vom
                Succeeding Spot durchgeführt. Die Regelung bliebe die gleiche,
                wenn der Ball gemufft oder gefumbelt wird. Die Regelung bliebe
                bei einem erfolglosen Fieldgoalversuch die gleiche, weil Team B
                den Ball jenseits neutralen Zone berührte.
            </p>
        </details>
    </div>
</article>
