src/snapshots/afrotd__parser__tests__interpretation_html_6.4.1_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 6.4.1.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei dem Versuch eines Team B-Spielers, einen Kick zu fangen, ohne
            Fair Catch-Signal, mufft er den Ball. Der Ball wird danach von
            einem Gegner berührt, der den Receiver nicht behindert, als dieser
            in Position ist, den Ball zu fangen.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Keine Behinderung beim Fangen eines Kicks. Durch das fehlende
                Fair Catch-Signal endet der Schutz zum ungehinderten Fangen
                eines Kicks, wenn ein Team BSpieler den Ball mufft.
            </p>
        </details>
    </div>
</article>
